--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@capacitor/app": "6.0.1",
     "@capacitor/camera": "^6.1.1",
     "@capacitor/core": "^6.2.0",
+    "@capacitor/geolocation": "^6.1.0",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/preferences": "^6.0.3",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@types/leaflet": "^1.9.16",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.0.0",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
